<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">T1B1Client</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">T1B1 Client</string>
    <string name="set_boulder_id">Set Boulder Number</string>
    <string name="get_startlist_id">Get Startlist</string>
    <string name="title_activity_select_boulder">SelectBoulder</string>
    <string name="select_boulder_id">Select Boulder Number</string>
    <string name="eightyeight">88</string>
    <string name="zero">0</string>   
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>   
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>    
    <string name="all">All</string>
    <string name="title_activity_enter_match_data">EnterMatchDataActivity</string>
    <string name="title_activity_get_start_list">GetStartListActivity</string>
    <string name="non_init">not initialized</string>
    <string name="bonus">Bonus</string>
    <string name="top">Top</string>
    <string name="undo">Undo</string>
    <string name="attempt">Attempt</string>
    <string name="finished">Finished</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="score">Score :</string>
    <string name="firstname_lastname">Firstname, lastname :</string>    
    <string name="startnumber">Startnumber :</string>  
    <string name="currentclimber">Current climber :</string>
    <string name="currentboulder">Current boulder :</string>
    <string name="attempts_done">Attempts done :</string> 
    <string name="exit_app_id">Exit</string> 
    <string name="OK">OK</string> 
    <string name="cancel">Cancel</string> 
    <string name="firstname">Firstname</string> 
    <string name="lastname">Lastname</string>   
    <string name="startnumber_short">Start nr</string>  
    <string name="back">Back</string>
    <string name="reload">Reload</string>
    <string name="noinit">No Init</string>
    <string name="start">Start</string>
    <string name="eventname">Event :</string>
    <string name="phasename">Phase :</string>
    <string name="poleposition">Polepos :</string>
    <string name="nrofboulders">Boulders:</string>
    <string name="boulderprefix">Prefix:</string>
    <string name="enroll">Enroll</string>
    <string name="empty"></string>
    <string name="flex">Flex</string>
    <string name="plus">+</string>
    <string name="minus">-</string>   
    <string name="clear">Clear</string>    
    <string name="enter">Enter</string> 
    <string name="submit">Submit</string>  
    <string name="unknown_startnumber">Unknown startnumber</string>       
    <string name="yes">Yes</string>    
    <string name="no">No</string> 
    <string name="top_reached">Top reached ?</string> 
    <string name="top_attempts">Top attempts:</string>     
    <string name="bonus_reached">Bonus reached ?</string>  
    <string name="bonus_attempts">Bonus attempts:</string>     
    <string name="enter_startnumber">Enter start number:</string>     
    <string name="requested_start_number">Requested start number:</string>     
    <string name="enter_boulder_number">Enter boulder number:</string>     
    <string name="requested_boulder_number">Requested boulder number:</string>     
    <string name="confirm">Confirm</string>     
    
</resources>