<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
	<!-- Main ListView 
		 Always give id value as list(@android:id/list)
	-->

 	 <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >  
	     
		<Button
		    android:id="@+id/start_button"
		    style="@style/ButtonStyle"
		    android:background="@drawable/custom_button"		    
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="top"
		    android:text="@string/start"
		    android:layout_weight="1"
		    android:textSize="@dimen/padding_huge" />
		
		<Button
		    android:id="@+id/reload_button"	
		    style="@style/ButtonStyle"
		    android:background="@drawable/custom_button"		    	    
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="top"
		    android:text="@string/reload"
		    android:layout_weight="1"
		    android:textSize="@dimen/padding_huge" />	    
	</LinearLayout>	
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >   
	       
	    <TextView
	        android:id="@+id/empty"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="30sp"
	        android:layout_weight="4"
	        android:text="@string/empty"
	         />  	
	</LinearLayout>	 	 
 	 
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >   
	       
	    <TextView
	        android:id="@+id/eventNameLabel"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="30sp"
	        android:layout_weight="4"
	        android:text="@string/eventname"
	         />    	     
	     
	    <TextView
	        android:id="@+id/eventnameLabel"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="30sp"
	        android:layout_weight="4"
	        android:text="@string/noinit"
	         />    
	    <TextView
	        android:id="@+id/phaseNameLabel"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="30sp"
	        android:layout_weight="4"
	        android:text="@string/phasename"
	         />    	    
	    <TextView
	        android:id="@+id/phasenameLabel"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="30sp"
	        android:layout_weight="4"
	        android:text="@string/noinit"
	         />
		
	</LinearLayout>	
	   
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >   
	       
	    <TextView
	        android:id="@+id/empty"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="30sp"
	        android:layout_weight="4"
	        android:text="@string/empty"
	         />  	
	</LinearLayout>	
	    
	<ExpandableListView 
   			android:id="@+id/phaseDefinitionList"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent" />
	
			
			</LinearLayout>


